2008-04-07  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* data/Makefile.am: Fix bugreport script not having
	a full-path (Closes: #526664)

2008-04-07  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (totem_action_load_media_device):
	Fix break-statement follow-through crasher when
	trying to load audio CDs, spotted by Stephen Moehle
	<stephen.moehle@gmail.com> (Closes: #526563)

2008-04-03  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bvw_update_interface_implementations):
	Fix unreffing a non-reffed element, fixes warnings
	when ximagesink is forced (Closes: #524807)
	Patch from Sjoerd Simons <sjoerd@luon.net>

2008-03-17  Vincent Untz  <vuntz@gnome.org>

	* data/desktop.sh: end the outputted line with \n

2008-03-14  Sebastien Bacher  <seb128@ubuntu.com>

	* data/mime-type-list.txt: lists the x-speex mimetype as supported
	(Closes: #522330)

============ Version 2.22.0

2008-03-10  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.22.0

2008-03-04  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Update GTK+ requirements to avoid
	crashing if the GTK+ doesn't implement GtkBuilder with
	a11y

============ Version 2.21.96

2008-03-03  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.21.96

2008-03-02  Bastien Nocera  <hadess@hadess.net>

	* data/totem.ui: Re-add ATK properties (Closes: #454642)

2008-03-01  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* src/backend/bacon-video-widget-gst-0.10.c:
	Add DVB-C support.

2008-02-28  Philip Withnall  <pwithnall@svn.gnome.org>

	* data/totem.ui: Back-out some of the changes in revision 5187,
	as they accidentally broke string freeze. (Reopens: #454642)

2008-02-27  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_set_scale_ratio): When a visualisation is
	playing, and we're being asked to resize the window to a scale,